improve in scan and search page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/linkedtrust-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="LinkedTrust - ESG Transparency Platform for searching and scanning companies and products with verified ESG ratings and community attestations." />
+    <meta name="keywords" content="ESG, sustainability, corporate responsibility, transparency, ratings, attestations, search, scan, QR code" />
+    <meta name="author" content="LinkedTrust" />
+    <title>LinkedTrust - ESG Transparency Platform</title>
   </head>
   <body>
     <div id="root"></div>
